webapp/static/css/main.css
/* ... */
::-webkit-input-placeholder {
  color: rgba(255,255,255,0.5);
  opacity: 1;
}
::-moz-placeholder {
  color: rgba(255,255,255,0.5);
  opacity: 1;
}
:-moz-placeholder {
  color: rgba(255,255,255,0.5);
  opacity: 1;
}
:-ms-input-placeholder {
  color: rgba(255,255,255,0.5);
  opacity: 1;
}
.tab-content > .tab-pane {
  display: none;
}
.tab-content > .active {
  display: block;
}
.fade {
  -webkit-transition: opacity 0.25s linear;
  -moz-transition: opacity 0.25s linear;
  transition: opacity 0.25s linear;
}
@media screen and (prefers-reduced-motion: reduce) {
  .fade {
    -webkit-transition: none;
    -moz-transition: none;
    transition: none;
  }
}
.fade:not(.show) {
  opacity: 0;
}
.collapse:not(.show) {
  display: none;
}
.collapsing {
  position: relative;
  height: 0;
  overflow: hidden;
  -webkit-transition: height 0.4s ease;
  -moz-transition: height 0.4s ease;
  transition: height 0.4s ease;
}
@media screen and (prefers-reduced-motion: reduce) {
  .collapsing {
    -webkit-transition: none;
    -moz-transition: none;
    transition: none;
  }
}
.b-description_readmore_button {
  cursor: pointer;
  display: block;
  height: 24px;
  width: 100%;
  position: relative;
}
.b-description_readmore_button:before {
  content: '\f1c8';
  font-family: "Ionicons";
  position: absolute;
  display: block;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  text-align: center;
  color: rgba(255,255,255,0.75);
  font-size: 22px;
  line-height: 24px;
  -webkit-transition: 0.4s ease;
  -moz-transition: 0.4s ease;
  transition: 0.4s ease;
}
.b-description_readmore_button:hover:before,
.b-description_readmore_button.b-description_readmore_button_active:before {
  color: #ff55a5;
}
.body:before {
  content: '';
  position: fixed;
  display: block;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 99;
  background-color: rgba(43,43,49,0.75);
  opacity: 0;
  pointer-events: none;
  -webkit-transition: 0.4s ease;
  -moz-transition: 0.4s ease;
  transition: 0.4s ease;
}
.body--active:before {
  z-index: 99;
  opacity: 1;
  pointer-events: auto;
}
/*==============================
	Header
==============================*/
.header {
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: #2b2b31;
  z-index: 101;
}
.header__logo {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 70px;
  padding: 0 15px;
  background-color: #28282d;
  width: 140px;
}
.header__logo img {
  width: auto;
  max-width: 110px;
  display: block;
}
.header__logo:hover {
  background-color: #2b2b31;
}
.header__nav {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  position: fixed;
  top: 70px;
  right: 0;
  bottom: 0;
  background-color: #2b2b31;
  z-index: 99;
  width: 260px;
  padding: 30px 30px 0;
  -webkit-transform: translate3d(260px, 0, 0);
  -moz-transform: translate3d(260px, 0, 0);
  transform: translate3d(260px, 0, 0);
  -webkit-transition: 0.4s ease;
  -moz-transition: 0.4s ease;
  transition: 0.4s ease;
}
.header__nav:before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 2px;
  display: block;
  background-image: -moz-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  -webkit-box-shadow: 0 0 20px 0 rgba(255,88,96,0.5);
  box-shadow: 0 0 20px 0 rgba(255,88,96,0.5);
}
.header__nav--active {
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}
.header__nav-link {
  font-size: 14px;
  font-weight: 300;
  text-transform: uppercase;
  color: rgba(255,255,255,0.75);
  letter-spacing: 0.2px;
}
.header__nav-link:hover {
  color: #ff55a5;
}
.header__nav-link--more {
  font-weight: 400;
  font-size: 24px;
}
.header__nav-link--active {
  color: #ff55a5;
}
.header__nav-item {
  width: 100%;
  display: block;
  margin-bottom: 20px;
  position: relative;
}
.header__nav-item:last-child {
  margin-bottom: 0;
}
.header__nav-item.show .header__nav-link {
  color: #ff55a5;
}
.header__nav-item--search .header__search-inline {
  display: flex;
  align-items: center;
  width: 350px;
}
.header__nav-item--search .header__search-btn {
  margin-right: 5px;
}
.header__nav-item--search {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  height: 60px;
  position: relative;
}
.header__nav-item--search input[type="text"] {
  position: relative;
  height: 60px;
  width: 100%;
  background-color: #28282d;
  border: none;
  padding: 0 60px 0 15px;
  font-size: 15px;
  color: #fff;
  font-family: 'Open Sans', sans-serif;
}
.header__nav-item--search button {
  position: absolute;
  height: 40px;
  width: 90px;
  top: 10px;
  right: 15px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
  background-image: -moz-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  -webkit-box-shadow: 0 0 20px 0 rgba(255,88,96,0.5);
  box-shadow: 0 0 20px 0 rgba(255,88,96,0.5);
  opacity: 0.85;
  font-size: 12px;
  color: #fff;
  text-transform: uppercase;
  font-weight: 500;
  letter-spacing: 0.6px;
}
.header__nav-item--search button:hover {
  color: #fff;
  opacity: 1;
}
.header__dropdown {
  position: relative;
  display: block;
  width: 100%;
}
/* ... */

